LazyLoad: Fix deferred loading of CSS background images

kDeferImageLoad bit is not set in the FetchParameters when CSS background
images need to be deferred. This CL fixes that, and also adds a browser
test.

Bug: 920899
Change-Id: I4d96d63c1bba2d2a0892e1b84ae364f29f53c152
Reviewed-on: https://chromium-review.googlesource.com/c/1405592
Reviewed-by: Nate Chapin <japhet@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: rajendrant <rajendrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623575}
Former-commit-id: 884d05298198751cbf2fc527181a98404f45884b